feat: caso de teste 1 feito

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 .venv
-testes
-casos_de_teste
+.vscode
 __pycache__/
-anltr.jar
-output.txt
-Jander.interp
-Jander.tokens
+
+Jander*
+!Jander.g4
+
+*teste*
+antlr*
 output*
-Jander.py
-casos_teste_3
-antlr-4.13.2-complete.jar
